--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,7 @@
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima repudiandae voluptate laboriosam mollitia
     distinctio libero recusandae corrupti placeat praesentium magnam ut consequuntur, nostrum sit fugit veniam officia
     nemo delectus veritatis.</p>
+  <h2>This is heading from my laptop</h2>
 </body>
 
 </html>
