another heading from laptop

--- a/blog.html
+++ b/blog.html
@@ -16,6 +16,7 @@
     distinctio libero recusandae corrupti placeat praesentium magnam ut consequuntur, nostrum sit fugit veniam officia
     nemo delectus veritatis.</p>
   <h2>This is heading from my laptop</h2>
+  <h3>This is another hading from my laptop</h3>
 </body>
 
 </html>
