jos neke vezbice

--- a/blog.html
+++ b/blog.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blog</title>
+  </head>
 
-<body>
-  <h1>This is our new blog</h1>
-  <h2>This is a new heading</h2>
-  <h3>This is H3 withut git repository</h3>
-  <h4>New changes</h4>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima repudiandae voluptate laboriosam mollitia
-    distinctio libero recusandae corrupti placeat praesentium magnam ut consequuntur, nostrum sit fugit veniam officia
-    nemo delectus veritatis.</p>
-  <h2>This is heading from my laptop</h2>
-  <h3>This is another hading from my laptop</h3>
-</body>
+  <body>
+    <h3>This is realy nice for is H3 withut git repository</h3>
+    <section>
+      <h3>This is realy nice for is H3 withut git repository</h3>
+    </section>
+    <section>
+      <h3>This is realy nice for is H3 withut git repository</h3>
+    </section>
+    <h4>New changes</h4>
+    <section>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima repudiandae voluptate laboriosam mollitia
+        distinctio libero recusandae corrupti placeat praesentium magnam ut consequuntur, nostrum sit fugit veniam
+        officia
+        nemo delectus veritatis.</p>
+    </section>
+    <h2>This is heading from my laptop</h2>
+    <section>
+      <h3>This is another hading from my laptop</h3>
+    </section>
+  </body>
 
 </html>
